# SolDevelopmentGP

./: .env  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: db.py  main.py  wait_for_db.py
app/routers/: albums.py  artists.py  health.py  tracks.py
scripts/: chinook-mysql.sql
